--- a/Views/Manage/_ManageNav.cshtml
+++ b/Views/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
-﻿@using exxon_redeemtion.Views.Manage
+﻿@using ExxonRedeemtion.Views.Manage
 @inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
