--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 @using Microsoft.AspNetCore.Identity
-@using exxon_redeemtion
-@using exxon_redeemtion.Models
-@using exxon_redeemtion.Models.AccountViewModels
-@using exxon_redeemtion.Models.ManageViewModels
+@using ExxonRedeemtion
+@using ExxonRedeemtion.Models
+@using ExxonRedeemtion.Models.AccountViewModels
+@using ExxonRedeemtion.Models.ManageViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
